--- a/U3C4 - Template/Template-U3C4/search.html
+++ b/U3C4 - Template/Template-U3C4/search.html
@@ -45,7 +45,7 @@
 
 <script type="module">
 
-import { apiCall, appendArticles} from "/Template-U3C4/scripts/main.js"
+import { apiCall, appendArticles} from "./scripts/main.js"
 
 let search_term = localStorage.getItem("search_term");
 
